<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planets1"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                android:id="@+id/button1"
                android:minHeight="120dp"
                android:minWidth="120dp"
                android:focusable="false"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:clickable="true"
                android:contextClickable="false"
                android:src="@mipmap/xwing" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planets2"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                android:id="@+id/button2"
                android:minHeight="120dp"
                android:minWidth="120dp"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:onClick="setContentView"
                android:nestedScrollingEnabled="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planets3"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                android:id="@+id/button3"
                android:minHeight="120dp"
                android:minWidth="120dp"
                android:layout_column="2"
                android:background="@android:drawable/screen_background_dark_transparent" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planets7"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                android:id="@+id/button7"
                android:minHeight="120dp"
                android:minWidth="120dp"
                android:background="@android:drawable/screen_background_dark_transparent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planets5"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                android:id="@+id/button5"
                android:minHeight="120dp"
                android:minWidth="120dp"
                android:layout_column="1"
                android:layout_weight="1"
                android:background="@android:drawable/screen_background_dark_transparent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planets6"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                android:id="@+id/button6"
                android:minHeight="120dp"
                android:minWidth="120dp"
                android:layout_column="2"
                android:background="@android:drawable/screen_background_dark_transparent" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:text="@string/planets4"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                android:minHeight="120dp"
                android:minWidth="120dp"
                android:layout_column="0"
                android:background="@android:drawable/screen_background_dark_transparent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planets8"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                android:id="@+id/button8"
                android:minHeight="120dp"
                android:minWidth="120dp"
                android:layout_column="1"
                android:background="@android:drawable/screen_background_dark_transparent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planets9"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                android:id="@+id/button9"
                android:minHeight="120dp"
                android:minWidth="120dp"
                android:layout_column="2"
                android:background="@android:drawable/screen_background_dark_transparent" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
